--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "controle-de-mesa-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "node",
+    "start": "node index.js",
     "create-db": "./node_modules/.bin/sequelize db:create",
     "migrate-db": "./node_modules/.bin/sequelize db:migrate",
     "drop-db": "./node_modules/.bin/sequelize db:drop",
